00-bookinfo-prereq.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: bookinfo
---
apiVersion: v1
kind: Namespace
metadata: 
  name: bookinfo-project
