01-productpage-deployable.yaml
# Source: bookinfo/charts/productpage/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage
  annotations:
    mcm.ibm.com/service-discovery: "{}"
  labels:
    app.kubernetes.io/name: productpage
    app.kubernetes.io/instance: bookinfo-demo
spec:
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
  type: NodePort
  selector:
    app.kubernetes.io/name: productpage
    app.kubernetes.io/instance: bookinfo-demo
---
---
# Source: bookinfo/charts/productpage/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-demo-productpage
  labels:
    runtime: python
    app.kubernetes.io/name: productpage
    app.kubernetes.io/instance: bookinfo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: productpage
      app.kubernetes.io/instance: bookinfo-demo
  template:
    metadata:
      labels:
        runtime: python
        app.kubernetes.io/name: productpage
        app.kubernetes.io/instance: bookinfo-demo
    spec:
      containers:
        - env:
          - name: OPENTRACING_ENABLED
            value: "true"
          - name: JAEGER_SAMPLER_TYPE
            value: "probabilistic"
          - name: JAEGER_SAMPLER_PARAM
            value: "1"
          - name: LATENCY_SAMPLER_PARAM
            value: "1"
          name: productpage
          #image: "docker.io/dymaczew/examples-bookinfo-productpage-v1:2020.2.1"
          image: "docker.io/istio/examples-bookinfo-productpage-v1:1.15.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 9080
          readinessProbe:
            tcpSocket:
              port: 9080
          resources:
            {}
---
# Source: bookinfo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookinfo-ingress
  annotations:
    mcm.ibm.com/service-discovery: "{}"
  labels:
    app.kubernetes.io/name: bookinfo
    app.kubernetes.io/instance: bookinfo-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: productpage
    servicePort: 9080
